# createTheSun

./: .gitignore  PyQt6 Starter.py  README.md  achevements.py  automationGameLogic.py  automationtab.py  changelog.json  currentCommit.txt  docs.md  game.py  gamedefine old.py  gamedefine.py  itemGameLogic.py  lcov.info  logging_.py  main.py  main.spec  maintab.py  numberLogic.py  observerModel.py  pyproject.toml  req  requirements.txt  requriements.txt  resourceGain.py  save.py  stylesheet.qss  tabs.py  tabs_.py  test.py  test.spec  unlocks.py  upgradeGameLogic.py  upgradetab.py  urbanistFont.py  version.txt  versions.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
assets/: stylesheet.qss
assets/fonts/urbanist/: urbanistFont.py
createthesun/: items.json  main.py  quickload.py  save.py  testsave.json
createthesun/tabs/: maintab.py
customWidgets/: dialogs.py
gameLogic/: automationGameLogic.py  itemGameLogic.py  numberLogic.py
installer/: build.ps1  installer.py  installer.spec  launcher.py  launcher.spec  stylesheet.qss
otherStuff/: build.ps1  build.py  createTheSun.code-workspace  semiUnrelatedTest.py
src/: main.py  qmlmain.py
src/createthesun/: __main__.py  gamedefine.py  iLoveModelsTotally.py  itemInteractions.py  main.py  main~2x3x.qml  materialInterface.py  observerModel.py  qmlver.py  quickload.py  resourceGain.py  s.py  save.py  saving.md  tabs_.py  test.py  unlocks.py  urbanistFont.py  version.txt
src/createthesun/appdata\local/CreateTheSun/Saves/: 1724884105.0773706.lastused1  metadata.metadata1  save.save1
src/createthesun/customWidgets/: dialogs.py
src/createthesun/gameLogic/: automationGameLogic.py  itemGameLogic.py  numberLogic.py
src/createthesun/old/: gamedefine.py  resourceGain.py  save.py  tabs_.py  unlocks.py
src/createthesun/qml/: CT_Rectangle.qml  CustomButton.qml  CustomToolTip.qml  buyXBox.qml  electrons.qml  mainTab.qml  progressbar.qml  testqmlfile.py
src/createthesun/qml/tabs/: mainTab.qml
src/createthesun/qmltester/: qmltester.py
src/createthesun/tabs/: achevementsTab.py  automationtab.py  electrons.py  maintab.py  rewriteTab.py  saveLoadTab.py  unlockTab.py
src/dacite/: __init__.py  cache.py  config.py  core.py  dataclasses.py  exceptions.py  types.py
tabs/: achevementsTab.py  automationtab.py  electrons.py  maintab.py  rewriteTab.py  saveLoadTab.py  settingstab.py  unlockTab.py
test/: __init__.py  test_misc.py  test_saveload.py  tests.py
tests/: test_misc.py  test_saveload.py
tkinter version/: decomp.txt  game.py  main.cpp  main.py  mainTab.py  new.py  project.version  save.txt  upgradesTab.py  version.py
tkinter version/internal_utils/: _base64.py
updater/src/: installer.spec  launcher.py
