[project]
name = "createthesun"
version = "0.3.0-a"
description = "An incremental game where the goal is to create the sun!"
readme = "README.md"
dependencies = [
    "altgraph==0.17.4",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "dacite==1.8.1",
    "deepdiff==6.7.1",
    "fonttools==4.47.0",
    "idna==3.6",
    "mpmath==1.3.0",
    "numpy==1.26.2",
    "ordered-set==4.1.0",
    "packaging==23.2",
    "pefile==2023.2.7",
    "pyinstaller==6.3.0",
    "pyinstaller-hooks-contrib==2023.10",
    "PyQt6-Qt6==6.6.1",
    "PyQt6-sip==13.6.0",
    "PySide6==6.6.1",
    "PySide6-Addons==6.6.1",
    "PySide6-Essentials==6.6.1",
    "pywin32==306",
    "pywin32-ctypes==0.2.2",
    "regex==2023.10.3",
    "repoze.lru==0.7",
    "requests==2.31.0",
    "setuptools==69.0.2",
    "shiboken6==6.6.1",
    "snakeviz==2.2.0",
    "swinlnk==0.1.4",
    "sympy==1.12",
    "tornado==6.4",
    "types-regex==2023.12.25.20240106",
    "types-requests==2.31.0.20240125",
    "urllib3==2.1.0",
    "versions-kaneryu",
]

[project.optional-dependencies]
tests = [
    "pytest==8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/createthesun",
    "src/dacite",
]

[tool.coverage.run]
source = ["createthesun"]
