[project]
name = "createthesun"
version = "0.3.0-a"
description = "An incremental game where the goal is to create the sun!"
readme = "README.md"
dependencies = [
    "altgraph",
    "certifi",
    "charset-normalizer",
    "dacite",
    "deepdiff",
    "fonttools",
    "idna",
    "mpmath",
    "numpy",
    "ordered-set",
    "packaging",
    "pefile",
    "pyinstaller",
    "pyinstaller-hooks-contrib",
    "PyQt6-Qt6",
    "PyQt6-sip",
    "PySide6",
    "PySide6-Addons",
    "PySide6-Essentials",
    "regex",
    "repoze.lru",
    "requests",
    "setuptools",
    "shiboken6",
    "snakeviz",
    "swinlnk",
    "sympy",
    "tornado",
    "types-regex",
    "types-requests",
    "urllib3",
    "versions-kaneryu",
]
[project.optional-dependencies]
dev = [
    "ruff",
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = [
    "src/createthesun",
    "src/dacite",
]
[tool.ruff]
target-version = "py312"
line-length = 120
include = [
    "pyproject.toml",
    "src/**/*.py",
]

[tool.ruff.lint]
select = [
    "I", # isort
]
[tool.coverage.run]
source = [
    "src/createthesun",
]
[tool.pytest.ini_options]
addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"